# AI-Learning-Platform

./: .env  .gitattributes  .gitignore  .readthedocs.yaml  Makefile  README.md  cli.py  config.yaml  emb_serve.py  globals.env  llm_serve.py  mkdocs.yml  prefetch.sh  pyproject.toml  requirements.txt
ml_service/: .gitignore  Dockerfile  Makefile  README.md  config.yaml  emb_serve.py  globals.env  llm_serve.py  prefetch.sh  pyproject.toml  requirements.txt  stt_serve.py
ml_service/config/: ray-cluster.yaml  ray-serve.yaml
ml_service/config/model/: c4ai-35b.yaml  mistral-7b.yaml  nous-capybara-34b.yaml  qwen-32b.yaml  yi-34b.yaml
ml_service/config/ray/: ray-cluster.dev.yaml  ray-cluster.yaml  ray-serve.yaml
ml_service/docker/: nvidia-cuda.Dockerfile  pytorch.Dockerfile  triton.Dockerfile  vllm.Dockerfile
ml_service/ml/llm/: engine.py  model_config.py  prompt_format.py  protocol.py
ml_service/test/: emb_client.py  llm_client.py  llm_client_http.py  requirements.txt  test.py
ml_service/utils/: base.py  loggers.py  parsers.py
server/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  config.yaml  docker-compose.prod.yaml  docker-compose.swarm.yaml  docker-compose.yaml  download_static_files.sh  entrypoint.sh  manage.py  prod.Dockerfile  pyproject.toml  server.py
server/api/v1/chat/: models.py  serializers.py  urls.py  views.py
server/api/v1/course/: models.py  serializers.py  urls.py  views.py
server/api/v1/user/: models.py  serializers.py  urls.py  views.py
server/chat/: chainlit.py  urls.py
server/chat/api/: models.py  urls.py  views.py
server/chat/migrations/: 0001_initial.py
server/course/: models.py  serializers.py  urls.py  views.py
server/course/migrations/: 0001_initial.py  0002_remove_course_document_course_document.py  0003_alter_course_document.py  0004_alter_course_document.py  0005_remove_course_document_delete_document.py
server/docker/cassandra/: Dockerfile  init-cassandra.sh
server/docker/ml_service/: Dockerfile  main.py  requirements.txt
server/docker/nginx/: Dockerfile  nginx.conf.template
server/docker/postgres/: Dockerfile  init-postgres.sh
server/docker/qdrant/: Dockerfile
server/lib/: README.md  ml_emb_service.py  pyproject.toml
server/lib/meglib/: __init__.py
server/lib/meglib/middleware/: __init__.py  errors.py
server/lib/meglib/ml/: __init__.py  api.py  errors.py  loaders.py  preprocessor.py  store.py  tools.py  (+1 more)
server/main/: asgi.py  settings.py  urls.py  views.py
server/megacad/: apps.py  serializers.py  urls.py  views.py
server/megacad/api/: mixins.py  models.py  permissions.py  urls.py  views.py
server/megacad/migrations/: 0001_initial.py
server/megacad/templates/: 404.html  500.html
server/test/: async_client.py  async_client_user.py  creds.json  jwt_course.py  jwt_user.py
server/user/: admin.py
server/user/api/: models.py  serializers.py  urls.py  views.py
server/user/migrations/: 0001_initial.py
server/utils/: base.py  utils.py
(+39 files in other folders)
