[tool.poetry]
name = "megacad"
version = "0.1.1"
description = ""
authors = ["Entropy <70720874+NavinKumarMNK@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
django = "5.0.4"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
whitenoise = "^6.6.0"
fastapi = "^0.110.0"
uvicorn = "0.29.0"
aiohttp = "^3.9.3"
django-cassandra-engine = "^1.8.0"
gunicorn = "22.0.0"
djangorestframework-simplejwt = "^5.3.1"
asgi-lifespan = "^2.1.0"

