[tool.poetry]
name = "meglib"
version = "0.1.0"
description = "library used in megacad server"
authors = ["Navin Kumar M"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pypdf2 = "^3.0.1"
langchain = "^0.1.16"
pdfminer-six = "^20231228"
qdrant-client = "^1.8.2"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
